// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Componente de lista de transações do extrato O Snapshot do componente deve permanecer sempre renderizar uma lista 1`] = `
<div
  data-testid="transacoes"
>
  <div
    class="transacao-container"
  >
    <p>
      08/06/2022
    </p>
    <p />
    <p>
      R$ 
      100
    </p>
  </div>
  <div
    class="transacao-container"
  >
    <p>
      09/06/2022
    </p>
    <p />
    <p>
      R$ 
      150
    </p>
  </div>
</div>
`;

exports[`Componente de transação do extrato O snapshot do componente deve permanecer sempre o mesmo 1`] = `
<div
  class="transacao-container"
>
  <p>
    08/06/2022
  </p>
  <p>
    saque
  </p>
  <p>
    R$ 
    100
  </p>
</div>
`;
